# asst

./: .env.example  .gitignore  CONVERSATION_SWITCH_FIX.md  PERMISSIONS_UPDATE.md  README.md  STATUS.md  TEST-QUICK.md  TESTING.md  claude.md  package.json  pnpm-lock.yaml  test-tools.js
.claude/agents/: frontend-tauri-expert.md  tauri-rust-ipc-architect.md
apps/agent-runtime/: package.json  test-sdk-adapter.js
apps/agent-runtime/src/: agent.ts  agent.ts.old  config.ts  index.ts  sdk-adapter.ts  sdk-tools.ts
apps/agent-runtime/src/agents/: loader.ts
apps/agent-runtime/src/persistence/: database.ts
apps/agent-runtime/src/tools/: clipboard.ts  custom.ts  filesystem.ts  index.ts  system.ts  types.ts  vision.ts
apps/tauri-shell/: generate-icons.cjs  index.html  package.json  tailwind.config.js  vite.config.ts
apps/tauri-shell/src/: App.tsx  styles.css  types.ts  useAgent.ts  useAgentLogs.ts
apps/tauri-shell/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/tauri-shell/src-tauri/icons/: .gitkeep  icon.icns
apps/tauri-shell/src-tauri/src/: agent_ipc.rs  main.rs
apps/tauri-shell/src/components/: Conversations.tsx  Markdown.tsx  Navigation.tsx  TerminalSidebar.tsx  ToolResult.tsx
apps/tauri-shell/src/components/ui/: command.tsx  dialog.tsx  dropdown-menu.tsx  sheet.tsx  toast.tsx
apps/tauri-shell/src/lib/: accessibility.ts
docs/: 01-project-setup.md  02-tauri-shell.md  03-agent-runtime.md  04-tool-layer.md  05-web-ui.md  06-ipc-protocol.md  07-security-config.md  08-sdk-migration-plan.md  08-terminal-sidebar.md  DOCS_COMPARISON.md  dreamy-stirring-fog.md  tauri_transparent_window.md
docs/assistant-upgrades/: IMAGE_SDK_FIX.md  README.md  enhanced-features.md  memory-system.md  voice-features.md
