[package]
name = "desktop-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["global-shortcut-all", "system-tray", "shell-open", "dialog-open", "fs-read-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
once_cell = "1.19"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
