[package]
name = "desktop-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = [ "window-set-always-on-top", "macos-private-api", "window-set-size", "dialog-open", "fs-read-file", "window-start-dragging", "shell-all", "global-shortcut-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
